graphql Add graphql and coffee query endpoint to get all coffees

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "copyFiles": "cp -a specs/schema/schema.graphql src/schema.graphql",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "yarn copyFiles && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -23,11 +24,15 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/graphql": "^7.6.0",
     "@nestjs/mapped-types": "^0.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
+    "apollo-server-express": "^2.16.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "graphql": "^15.3.0",
+    "graphql-tools": "^6.0.18",
     "pg": "^8.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
